apps/mirakurun/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app

spec:
  type: NodePort
  ports:
    - name: "40772"
      port: 40772
      nodePort: 40772
      targetPort: 40772
      protocol: TCP
  selector:
    app: default
